log-output-app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-reader-app
  namespace: log-output-app-namespace
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3003

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: log-output-app-namespace
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
